resources/external-services/github/github-redirect.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: github-external
  namespace: external
spec:
  hosts:
    - github.com
    - www.github.com
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
  - "."
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: github-egress
  namespace: external
spec:
  hosts:
    - github.com
    - www.github.com
  gateways:
    - external/egress-github
  http:
    - match:
        - gateways:
            - external/egress-github
          port: 80
      route:
        - destination:
            host: github.com
            port:
              number: 80
